Archive2/70/c49cdf4b312240/output
main.cpp:28:66: error: no type named 'type' in 'back<list<> >'
struct back<S<T, Args...>> : identity<typename back<S<Args...>>::type> {};
                                      ~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~
main.cpp:28:48: note: in instantiation of template class 'back<list<long double> >' requested here
struct back<S<T, Args...>> : identity<typename back<S<Args...>>::type> {};
                                               ^
main.cpp:28:48: note: in instantiation of template class 'back<list<double, long double> >' requested here
struct back<S<T, Args...>> : identity<typename back<S<Args...>>::type> {};
                                               ^
main.cpp:28:48: note: in instantiation of template class 'back<list<float, double, long double> >' requested here
struct back<S<T, Args...>> : identity<typename back<S<Args...>>::type> {};
                                               ^
main.cpp:36:32: note: in instantiation of template class 'back<list<int, float, double, long double> >' requested here
    static_assert(std::is_same<back<x>::type, long double>::value, "...");
                               ^
1 error generated.
